# VK_Post_Collector_v1.0

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/core/: excel_exporter.py  vk_client.py
src/gui/: app.py
src/utils/: config.py  logger.py  security.py
