[tool.poetry]
name = "vk-post-collector"
version = "0.1.0"
description = "Программа для сбора постов из групп ВКонтакте с сохранением полного текста в Excel"
authors = ["Your Name <Stariy>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "11.9.5"
openpyxl = "3.1.2"
tkcalendar = "1.6.1"
requests = "2.31.0"
Pillow = ">=10.3.0"

[tool.poetry.scripts]
start = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"